@@ -15,6 +15,7 @@ if( !defined( 'ABSPATH' ) ) {
 $template_directory = get_template_directory();
 
 require( $template_directory . '/core/includes/functions.php' );
+require( $template_directory . '/core/includes/functions-update.php' );
 require( $template_directory . '/core/includes/theme-options.php' );
 require( $template_directory . '/core/includes/post-custom-meta.php' );
 require( $template_directory . '/core/includes/tha-theme-hooks.php' );
