@@ -1,7 +1,7 @@
 -------------------------------------------------------
     Thank you for downloading Responsive Theme!
 -------------------------------------------------------
-This and any other Theme provided by ThemeID should
+This and any other Theme provided by CyberChimps should
 be free of bugs, however do note that we're only humans
 and if you spot a bug do us a favor and report here
 http://cyberchimps.com/forum/free/responsive/
@@ -31,7 +31,7 @@ on the right and choose any available Template.
 
 We Have:
 Blog (full posts), Blog Summaries, Content/Sidebar, Sidebar/Content,
-Content/Sidebar Half, Sidebar/Content Half, Full Width Page, even a 
+Content/Sidebar Half, Sidebar/Content Half, Full Width Page, even a
 landing page in case that you don't want anything else but the clean
 white design and your logo, perfect for PPC or anything else. There's
 also a sitemap Template.
@@ -41,7 +41,7 @@ Oh boy, we love menus and that's why we decided to give you little bit
 more than what you're probably use to. Responsive offers 4 of them
 One at very top, second in header, third just after the header, we like
 to call that sub-header menu and the fourth one is all the way down in
-footer area. 
+footer area.
 
 What's great about this is that the other 3 are kind of on-demand,
 activate when needed, if not oh well...
@@ -53,7 +53,7 @@ activate when needed, if not oh well...
 Yes I know, but we have to say few words about
 that.
 
-The Theme itself is nothing but 100% GPL3. 
+The Theme itself is nothing but 100% GPL3.
 See license.txt for further details. There
 are however some parts of this Theme which are not
 GPL, however they are GPL-Compatible and thats still
